--- a/LearningCenter.Application/LearningCenter.Application.csproj
+++ b/LearningCenter.Application/LearningCenter.Application.csproj
@@ -15,6 +15,7 @@
     <ItemGroup>
         <PackageReference Include="AutoMapper" Version="12.0.1"/>
         <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1"/>
+        <PackageReference Include="Microsoft.ApplicationInsights" Version="2.22.0" />
     </ItemGroup>
 
 </Project>
