--- a/LearningCenter.Presentation/appsettings.json
+++ b/LearningCenter.Presentation/appsettings.json
@@ -8,5 +8,8 @@
   "ConnectionStrings": {
     "learningCenterConnection": "Server=127.0.0.1,3306;Uid=root;Pwd=Upc123!;Database=LearningCenterWS52DB;"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ApplicationInsights": {
+    "InstrumentationKey": "8a414965-0756-4903-bbe1-f19ba61bda1b"
+  }
 }
