feat: update cs

--- a/LearningCenter.Presentation/appsettings.json
+++ b/LearningCenter.Presentation/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "learningCenterConnection": "Server=127.0.0.1,3306;Uid=root;Pwd=Upc123!;Database=LearningCenterWS52DB;"
+    "learningCenterConnection": "Server=sql10.freemysqlhosting.net,3306;Uid=sql10712095;Pwd=kLGRHt5Adh;Database=sql10712095;"
   },
   "AllowedHosts": "*",
   "ApplicationInsights": {
