--- a/LearningCenter.Presentation/LearningCenter.Presentation.csproj
+++ b/LearningCenter.Presentation/LearningCenter.Presentation.csproj
@@ -29,6 +29,7 @@
         <Folder Include="Publishing\"/>
         <Folder Include="Purchase\" />
         <Folder Include="Sales\" />
+        <Folder Include="Security\Controllers\" />
     </ItemGroup>
 
 </Project>
