--- a/LearningCenter.Application/LearningCenter.Application.csproj
+++ b/LearningCenter.Application/LearningCenter.Application.csproj
@@ -15,7 +15,10 @@
     <ItemGroup>
         <PackageReference Include="AutoMapper" Version="12.0.1"/>
         <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1"/>
+        <PackageReference Include="BCrypt.Net" Version="0.1.0" />
         <PackageReference Include="Microsoft.ApplicationInsights" Version="2.22.0" />
+        <PackageReference Include="Microsoft.IdentityModel.JsonWebTokens" Version="7.6.0" />
+        <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="7.6.0" />
     </ItemGroup>
 
 </Project>
