--- a/LearningCenter.Presentation/appsettings.json
+++ b/LearningCenter.Presentation/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "AppSettings": {
+    "secret": "learnig-center-upc-wx-2024-asdasdadadadasd"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
